2009-08-28  Daniel Elstner  <danielk@openismus.com>

	Increment version to 2.17.9.2 and update news

	* configure.ac (AC_INIT): Bump version number to 2.17.9.2.
	* NEWS: Write news entry for gtkmm 2.17.9.2.

2009-08-28  Daniel Elstner  <danielk@openismus.com>

	Remove documentation location override

	* docs/Makefile.am (htmlrefpub): Remove variable override as
	the documentation is now hosted on library.gnome.org.  D'oh.

2009-08-28  Daniel Elstner  <danielk@openismus.com>

	Increment version to 2.17.9.1 and update news

	* configure.ac (AC_INIT): Bump version number to 2.17.9.1.
	(AM_INIT_AUTOMAKE): Enable check-news option.
	(MM_PREREQ): Require mm-common 0.7.1.
	* NEWS: Write news entry for gtkmm 2.17.9.1.

2009-08-28  Daniel Elstner  <danielk@openismus.com>

	Use shared mm-common Doxygen style sheet

	* configure.ac (MM_PREREQ): Require mm-common 0.7.
	* docs/reference/Doxyfile.in (HTML_STYLESHEET): Assign path
	to the shared doxygen.css provided by mm-common.

2009-08-28  Daniel Elstner  <danielk@openismus.com>

	Remove header and footer HTML fragments

	* docs/reference/gtkmm_{header,footer}.html_fragment: Delete
	files.  These custom fragments were an unnecessary maintenance
	hassle.  Also, the files were out of date with respect to the
	encoding and CSS classes used by Doxygen.
	* docs/reference/Doxyfile.in (HTML_HEADER), (HTML_FOOTER): Set
	to the empty string.
	(PROJECT_NUMBER): Substitute @PACKAGE_VERSION@.  It does look
	nicer in the generated HTML pages, and is probably also less
	confusing.
	(SORT_GROUP_NAMES): Enable for predictability.
	* docs/Makefile.am (dist_noinst_DATA): Remove deleted HTML
	fragment files.

2009-08-26  Daniel Elstner  <danielk@openismus.com>

	Reenable hierarchy graphs for each class

	* docs/reference/Doxyfile.in (COLLABORATION_GRAPH): Set option
	to YES to enable the per-class inheritance graphs.

2.17.9:

2009-08-25  Daniel Elstner  <danielk@openismus.com>
