@@ -1,5 +1,5 @@
 doxytagfile=${docdir}/reference/@GTKMM_MODULE_NAME@.tag
-htmlrefpub=http://www.gtkmm.org/docs/@GTKMM_MODULE_NAME@/docs/reference/html/
+htmlrefpub=http://library.gnome.org/devel/@PACKAGE_TARNAME@/unstable/
 
 Name: atkmm
 Description: C++ binding for the ATK accessibility toolkit, uninstalled
