@@ -8,7 +8,7 @@ includedir=@includedir@
 docdir=${datarootdir}/doc/@GTKMM_MODULE_NAME@
 doxytagfile=${docdir}/reference/@GTKMM_MODULE_NAME@.tag
 htmlrefdir=${docdir}/reference/html
-htmlrefpub=http://www.gtkmm.org/docs/@GTKMM_MODULE_NAME@/docs/reference/html/
+htmlrefpub=http://library.gnome.org/devel/@PACKAGE_TARNAME@/unstable/
 
 Name: atkmm
 Description: C++ binding for the ATK accessibility toolkit
